# twitchtokengen

./: Cargo.toml  Dockerfile  README.md
apitest/: generatetoken.http
src/: main.rs
src/api/: app_data.rs  mod.rs
src/api/db/: client.rs
src/api/v1/endpoints/: auth.rs
