[package]
name = "api_starter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.9.0", features = ["secure-cookies"] }
anyhow = "1.0.95"
chrono = { version = "0.4.38", features = ["clock", "std", "serde"] }
derivative = "2.2.0"
derive_more = { version = "1.0.0", features = ["full"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures = "0.3.30"
log = { version = "0.4.22", features = ["serde", "std", "kv_unstable"] }
postgrest = "1.6.0"
reqwest = "0.12.12"
retainer = "0.3.0"
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.63"
twitch_oauth2 = { version = "0.14.0", features = ["all"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
warp = "0.3.7"
